--- a/index.html
+++ b/index.html
@@ -1087,6 +1087,11 @@
                 text-align: center;
             }
 
+            /* Ensure hero content sits below the header on mobile */
+            .hero-section {
+                padding-top: 140px;
+            }
+
             .hero-content h1 {
                 font-size: 48px;
             }
