--- a/index.html
+++ b/index.html
@@ -1022,10 +1022,7 @@
 
             .nav-menu {
                 position: fixed;
-                top: 0;
-                left: 0;
-                width: 100vw;
-                height: 100vh;
+                inset: 0; /* shorthand for top:0; right:0; bottom:0; left:0 */
                 background: rgba(0,0,0,0.96);
                 display: flex;
                 flex-direction: column;
@@ -1035,11 +1032,13 @@
                 visibility: hidden;
                 transition: opacity 0.35s ease, visibility 0.35s ease;
                 z-index: 2000;
-                padding: 0;
+                padding: 0 20px; /* horizontal padding to avoid edge clipping */
                 margin: 0;
-                overflow: hidden;
+                overflow-y: auto; /* allow vertical scrolling on small screens */
+                -webkit-overflow-scrolling: touch;
                 backface-visibility: hidden;
                 -webkit-backface-visibility: hidden;
+                box-sizing: border-box;
             }
 
             .nav-menu.active {
@@ -1055,6 +1054,7 @@
                 text-align: center;
                 width: 100%;
                 list-style: none;
+                display: block;
             }
 
             .nav-menu.active li { opacity: 1; transform: translateY(0); }
@@ -1064,8 +1064,10 @@
                 font-size: 28px;
                 font-family: var(--heading-font);
                 font-weight: 500;
-                padding: 8px 12px;
-                display: inline-block;
+                padding: 12px 20px; /* larger tap target */
+                display: block; /* fill available width */
+                width: 100%;
+                box-sizing: border-box;
                 text-transform: uppercase;
                 letter-spacing: 2px;
                 transition: color 0.25s ease, transform 0.25s ease;
@@ -1304,7 +1306,7 @@
                     </h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt
                         ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nos</p>
-                    <a href="#services" class="hero-btn">Shop Now</a>
+                    <a href="#services" class="hero-btn">View more</a>
                 </div>
 
                 <!-- Right Image with Interactive Points -->
