--- a/index.html
+++ b/index.html
@@ -1519,7 +1519,7 @@
                         <div class="contact-details">
                             <div class="contact-item">
                                 <i class="fas fa-phone"></i>
-                                <span>+91 77688 97228</span>
+                                <span>+91 9326348496</span>
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-envelope"></i>
@@ -1990,3 +1990,4 @@
 </body>
 
 </html>
+
